--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/nasa-logo.svg" />
+    <link rel="icon" type="image/svg+xml" href="https://upload.wikimedia.org/wikipedia/commons/e/e5/NASA_logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Exopedia - NASA Exoplanet Explorer with AI Classification" />
+    <meta name="description" content="Exopedia - NASA-powered exoplanet discovery and exploration platform. Discover distant worlds, analyze exoplanet data, and explore the universe." />
     <title>Exopedia - NASA Exoplanet Explorer</title>
   </head>
   <body>
